--- a/package.json
+++ b/package.json
@@ -74,10 +74,11 @@
         "chart.js": "^2.8.0",
         "compression": "1.7.4",
         "connected-react-router": "6.4.0",
-        "cross-env": "5.2.0",
+        "cross-env": "^5.2.0",
         "draft-js": "^0.11.0",
         "draftjs-to-html": "^0.8.4",
         "express": "4.16.4",
+        "firebase": "^9.8.1",
         "font-awesome": "^4.7.0",
         "fontfaceobserver": "2.1.0",
         "history": "4.9.0",
@@ -89,8 +90,8 @@
         "ip": "1.1.5",
         "joi-browser": "^13.4.0",
         "js-cookie": "^2.2.0",
-        "lodash": "4.17.11",
-        "minimist": "1.2.0",
+        "lodash": "^4.17.21",
+        "minimist": "^1.2.6",
         "moment": "^2.24.0",
         "node-sass": "^4.12.0",
         "prop-types": "15.7.2",
@@ -173,8 +174,8 @@
         "eslint-plugin-jsx-a11y": "6.2.1",
         "eslint-plugin-prettier": "3.0.1",
         "eslint-plugin-react": "7.12.4",
-        "eslint-plugin-redux-saga": "1.0.0",
         "eslint-plugin-react-hooks": "1.6.0",
+        "eslint-plugin-redux-saga": "1.0.0",
         "file-loader": "3.0.1",
         "html-loader": "0.5.5",
         "html-webpack-plugin": "3.2.0",
@@ -195,7 +196,7 @@
         "react-test-renderer": "16.8.6",
         "react-testing-library": "6.1.2",
         "rimraf": "2.6.3",
-        "shelljs": "0.8.3",
+        "shelljs": "^0.8.5",
         "style-loader": "0.23.1",
         "stylelint": "10.0.1",
         "stylelint-config-recommended": "2.2.0",
@@ -207,8 +208,8 @@
         "webpack": "4.30.0",
         "webpack-cli": "3.3.0",
         "webpack-dev-middleware": "3.6.2",
-        "webpack-hot-middleware": "2.24.3",
-        "webpack-pwa-manifest": "4.0.0",
+        "webpack-hot-middleware": "^2.25.1",
+        "webpack-pwa-manifest": "^4.3.0",
         "whatwg-fetch": "3.0.0"
     }
 }
